--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
           <input id="name" class="form-control" type="text">
         </div>
         <div class="form-group">
+          <label for="born">Date of birth:</label>
+          <input id="born" class="form-control" type="date">
+        </div>
+        <div class="form-group">
           <select class="form-control" id="food">
             <option>Pizza</option>
             <option>Burgers</option>
@@ -44,11 +48,7 @@
             </label>
           </div>
         </div>
-
-
       </form>
-
     </div>
-
   </body>
 </html>
